--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
 
   flutter_native_splash: ^2.4.6
   lottie: ^3.3.1
+  icons_plus: ^5.0.0
 
 
 dev_dependencies:
@@ -39,7 +40,6 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/banner/
     - assets/images/logo/logo.png
     - assets/animations/loading/
 
