--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
   lottie: ^3.3.1
   icons_plus: ^5.0.0
+  intl_phone_field: ^3.2.0
 
 
 dev_dependencies:
@@ -41,6 +42,8 @@ flutter:
 
   assets:
     - assets/images/logo/logo.png
+    - assets/images/logo/google.png
+    - assets/images/
     - assets/animations/loading/
 
 # For details regarding adding assets from package dependencies for slash screen,
