--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   firebase_core: ^3.14.0
+  firebase_auth: ^5.6.0
+  cloud_firestore: ^5.6.9
 
   flutter_localizations:
     sdk: flutter
@@ -26,6 +28,8 @@ dependencies:
   lottie: ^3.3.1
   icons_plus: ^5.0.0
   intl_phone_field: ^3.2.0
+  shared_preferences: ^2.5.3
+
 
 
 dev_dependencies:
