Banner and Notification

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   intl_phone_field: ^3.2.0
   shared_preferences: ^2.5.3
   iconsax: ^0.0.8
+  carousel_slider: ^5.1.1
+  get: ^4.7.2
 
 
 
@@ -49,6 +51,7 @@ flutter:
     - assets/images/logo/logo.png
     - assets/images/logo/google.png
     - assets/images/
+    - assets/images/banner/
     - assets/animations/loading/
 
 # For details regarding adding assets from package dependencies for slash screen,
