--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   iconsax: ^0.0.8
   carousel_slider: ^5.1.1
   get: ^4.7.2
+  flutter_staggered_grid_view: ^0.7.0
+  image_picker: ^1.1.2
+  dropdown_search: ^6.0.2
+  smooth_page_indicator: ^1.2.1
 
 
 
