--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
 
   cupertino_icons: ^1.0.8
 
-  firebase_core: ^3.14.0
-  firebase_auth: ^5.6.0
-  cloud_firestore: ^5.6.9
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
+  cloud_firestore: ^6.0.2
 
   flutter_localizations:
     sdk: flutter
@@ -37,6 +37,8 @@ dependencies:
   dropdown_search: ^6.0.2
   smooth_page_indicator: ^1.2.1
   fl_chart: ^1.0.0
+  firebase_storage: ^13.0.2
+
 
 
 
@@ -45,7 +47,7 @@ dev_dependencies:
     sdk: flutter
 
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 
 flutter:
