--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   fl_chart: ^1.0.0
   firebase_storage: ^13.0.2
   rxdart: ^0.28.0
+  google_ml_kit: ^0.20.0
+  camera: ^0.11.3
 
 
 
